Updated Tasks prioritization Resolved NaN bug for E_Coversheet Oh, rolled out new e_coversheet in the previous version

--- a/print/css/e_coversheet.css
+++ b/print/css/e_coversheet.css
@@ -61,7 +61,6 @@ td {
 }
 
 #page_type_header {
-    text-align: center;
     font-size: 22pt;
     font-weight: bold;
     letter-spacing: 1px;
@@ -71,11 +70,10 @@ td {
 
 #page_type .definition {
     font-size: 8pt;
-    line-height: 19px;
 }
 
 #page_type .value {
-    font-size: 10pt;
+    font-size: 8pt;
     font-weight: bold;
 }
 
